syntax = "proto3";

option go_package = "encr.dev/proto/encore/server/remote/tunnel";

package encore.server.remote.tunnel;

message SetupReq {
  string app_slug = 1;
}

message SetupResp {
  string app_slug = 1;
  string env_id = 2;
  string env_name = 3;
}

message RPCReq {
  int64 req_id = 1;
  string endpoint = 2;
  bytes payload = 3;
}

message RPCResp {
  int64 req_id = 1;
  int32 status = 2;
  bytes payload = 3;
}